--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^2.6.10",
     "vue-infinite-scroll": "^2.0.2",
     "vue-loader": "^15.7.1",
+    "vue-router": "^3.0.7",
     "vue-template-compiler": "^2.6.10"
   },
   "devDependencies": {
