--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue-infinite-scroll": "^2.0.2",
     "vue-loader": "^15.7.1",
     "vue-router": "^3.0.7",
+    "vue-spinner": "^1.0.3",
     "vue-template-compiler": "^2.6.10"
   },
   "devDependencies": {
