--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-template-compiler": "^2.6.10"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
     "@babel/polyfill": "^7.4.4",
     "babel-eslint": "^10.0.2",
     "babel-preset-env": "^1.7.0",
